feat: add share feature POC with Lambda API, WebSocket, and viewer
Implements the OpenCode share feature allowing users to create public,
shareable links to coding sessions. Uses event-sourcing with S3 storage,
real-time WebSocket updates, and an HTML viewer with dark mode support.

Components:
- Lambda API with 6 handlers (create, sync, get, delete, view, health)
- Event-sourcing business logic with compaction for efficient reads
- Standalone HTML/JS/CSS viewer
- CloudFormation templates for Lambda + API Gateway + S3 + DynamoDB
- WebSocket API for real-time session updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.js
 !jest.config.js
+!services/share/viewer/*.js
 *.d.ts
 node_modules
 .vscode/
@@ -44,3 +45,8 @@ venv/
 
 # Local feature tracking (not committed)
 docs/features/
+
+# Share service build artifacts
+services/share/lambda/node_modules/
+services/share/lambda/dist/
+services/share/lambda/*.zip
